--- a/_data/general_settings.yml
+++ b/_data/general_settings.yml
@@ -30,7 +30,7 @@ social_accounts:
     - url: "https://www.facebook.com/WoiluID"
       icon: "jam jam-facebook"
 
-    - url: "https://www.instagram.com/Woilu"
+    - url: "https://www.instagram.com/Woilu_"
       icon: "jam jam-instagram"
 
     - url: "#"
